--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bodyIndex">
-    <div class="hej">
+    <div class="cont">
         <div class="ulClass">
             <ul>
                 <li><a href="index.html">Search</a></li>
